--- a/front_financa/src/index.css
+++ b/front_financa/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
 ::-webkit-scrollbar {
   width: 5px;
   height: 5px;
